# os-cli

./: Cargo.toml  Makefile  install.sh
.github/workflows/: release.yml
src/: api_client.rs  config.rs  main.rs
src/commands/: auth.rs  loop_cmd.rs  meta.rs  mod.rs  pull.rs  push.rs  search.rs  sync.rs  task.rs  token.rs  upgrade.rs  user.rs
src/tui/: app.rs  data.rs  events.rs  mod.rs  theme.rs
src/tui/views/: changes.rs  chat.rs  clients.rs  dashboard.rs  identity.rs  lead.rs  mod.rs  pipeline.rs  project.rs  search.rs  skills.rs  status.rs
