[package]
name = "os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
dirs = "5"
toml = "0.8"
open = "5"
chrono = "0.4"

# Shared types — local path for dev, switch to git dep when os repo is pushed
os-shared = { path = "../os/shared" }
