[package]
name = "os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
dirs = "5"
toml = "0.8"
open = "5"
chrono = "0.4"

# Shared types from os repo
os-shared = { git = "https://github.com/agemalabs/os", branch = "main" }
semver = "1"
sha2 = "0.10"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
